# STQL-haskell

./: .ghc.environment.x86_64-darwin-8.10.7  .ghc.environment.x86_64-linux-8.10.7  .gitignore  CHANGELOG.md  PLC.cabal  README.md  Script.hs  Stql  Stql.hs  StqlEval.hs  StqlGrammar.hs  StqlGrammar.y  StqlInterpreter.hs  StqlLogic.hs  StqlTokens.hs  StqlTokens.x  bar.ttl  baz.ttl  cabal.project  lexer.x  pr1.stql  pr10.stql  pr2.stql  pr3.stql  pr4.stql  pr5.stql  pr7.stql  pr8.stql  pr9.stql  problems.stql  tasks.md  tasks.txt
app/: AST.hs  Evaluator.hs  Interpreter.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  SNE.hs  SNEInternal.hs  Script-Tester.hs  Stql-Logic.hs  Stql.hs  StqlEval.hs  TurtlePrint.hs  clearDir.sh  swish-version.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: parseURLs-example.hs  wordcount.x
inputs/: bar.ttl
old_inputs/: foo.ttl
outputs/: out10.ttl  out5.ttl  out6.ttl  out7.ttl  out8.ttl  out9.ttl
solutions/: pr1.stql  pr2.stql  pr3.stql  pr4.stql  pr5.stql  problems.stql
wordcount-example/: wordcount.x
