cabal-version:      2.4
name:               PLC
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-3.0-or-later

-- The file containing the license text.
license-file:       LICENSE

author:             Patricia
maintainer:         pww1u19@soton.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable PLC
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lexer, Parser, Evaluator, AST

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      rdf4h,
                      swish,
                      utf8-string,
                      mtl,
                      array
    
    hs-source-dirs:   app
    default-language: Haskell2010 
